docs/versions/v16.0.0/introduction/additional-resources.md
---
title: Additional Resources
---

The following resources are useful for learning Expo and some of the projects that it depends on.

## Expo Blog

- [Exposition](https://blog.expo.io/) - our official blog

## Courses using Expo

- [repl.it - React Native - Build your first app in the next 5 minutes](https://repl.it/site/react_native) (free)
- [RMOTR - React Native & Expo for Mobile Development](https://rmotr.com/introduction-to-react-native-and-expo)
- [Udemy - React Native: Advanced Concepts by Stephen Grider](https://www.udemy.com/react-native-advanced/)
- [Pluralsight - Build Cross Platform React Native Apps with Expo and Redux](https://www.pluralsight.com/courses/build-react-native-exponent-redux-apps) (old)

## React Native

- [React Native Express](http://www.reactnativeexpress.com/) - The best way to get started with React Native! It's a walkthrough the building blocks of React and React Native.
- [Official React Native Documentation](https://facebook.github.io/react-native/docs/sample-application-movies.html)
- [React Native Fundamentals](https://egghead.io/courses/react-native-fundamentals) (video course on Egghead.io)
- [Animating React Native UI Elements](https://egghead.io/courses/animate-react-native-ui-elements) (video course on Egghead.io)
- [Learning React Native](http://shop.oreilly.com/product/0636920041511.do) (book)

## Talks

- [React Europe - Building li.st for Android with Expo and React Native](https://www.youtube.com/watch?v=cI9bDvDEsYE)
- [CS50 at Harvard University - Easily Build Apps with React Native](https://www.youtube.com/watch?v=uFrAZfPW9JY)
- [Apollo Day - GraphQL at Expo](https://www.youtube.com/watch?v=E398q4HGRBA)
- [Reactive - From React web to native mobile](https://www.youtube.com/watch?v=-XxSCi8TKuk)
- [React Conf - Create React Native App](https://www.youtube.com/watch?v=9baaVjGdBqs)

## React

- [React lessons on Egghead.io](https://egghead.io/technologies/react) - several playlists that cover React and Redux fundamentals.
- [Official React Documentation](https://facebook.github.io/react/docs/getting-started.html)

## JavaScript

- [ES6 Katas](http://es6katas.org/) - exercises to familiarize yourself with new JavaScript features used in React Native