docs/versions/v23.0.0/introduction/additional-resources.md
---
title: Additional Resources
---

The following resources are useful for learning Expo and some of the projects that it depends on.

## Expo Blog

- [Exposition](https://blog.expo.io/) - our official blog, where we post release notes every month and other Expo related content at random intervals.

## Courses using Expo

- [repl.it - React Native - Build your first app in the next 5 minutes](https://repl.it/site/react_native) (free)
- [React Europe - Introduction to React Native Workshop videos on YouTube](https://www.youtube.com/playlist?list=PLCC436JpVnK2RFms3NG9ubPToWCNbMLbT) (free)
- [RMOTR - React Native & Expo for Mobile Development](https://rmotr.com/introduction-to-react-native-and-expo) (paid)
- [Udemy - React Native: Advanced Concepts by Stephen Grider](https://www.udemy.com/react-native-advanced/) (paid)
- [Udacity - React Nanodegree](https://www.udacity.com/course/react-nanodegree--nd019) (paid)

## React Native

- [React Native Express](http://www.reactnativeexpress.com/) - The best way to get started with React Native! It's a walkthrough the building blocks of React and React Native.
- [Official React Native Documentation](https://facebook.github.io/react-native/docs/sample-application-movies.html)
- [React Native Fundamentals](https://egghead.io/courses/react-native-fundamentals) (video course on Egghead.io)
- [Animating React Native UI Elements](https://egghead.io/courses/animate-react-native-ui-elements) (video course on Egghead.io)
- [Learning React Native](http://shop.oreilly.com/product/0636920041511.do) (book)
- [Chat Tutorial by Jani Eväkallio](https://github.com/jevakallio/react-native-chat-tutorial)

## Talks

- [React Native Europe - The Building of Snack](https://www.youtube.com/watch?v=Uk45O6AygH8)
- [React Europe - Expo Snack](https://www.youtube.com/watch?v=U0vnAW4UNXE)
- [React Conf - Create React Native App](https://www.youtube.com/watch?v=9baaVjGdBqs)
- [Reactive - From React web to native mobile](https://www.youtube.com/watch?v=-XxSCi8TKuk)
- [React Europe - Building li.st for Android with Expo and React Native](https://www.youtube.com/watch?v=cI9bDvDEsYE)
- [CS50 at Harvard University - Easily Build Apps with React Native](https://www.youtube.com/watch?v=uFrAZfPW9JY)
- [Apollo Day - GraphQL at Expo](https://www.youtube.com/watch?v=E398q4HGRBA)

## React

- [React Express](http://www.react.express/)
- [React lessons on Egghead.io](https://egghead.io/technologies/react) - several playlists that cover React and Redux fundamentals.
- [Official React Documentation](https://facebook.github.io/react/docs/getting-started.html)

## JavaScript

- [ES6 Katas](http://es6katas.org/) - exercises to familiarize yourself with new JavaScript features used in React Native
